--- a/openinfra_core/pom.xml
+++ b/openinfra_core/pom.xml
@@ -118,6 +118,33 @@
 		    <artifactId>urlrewritefilter</artifactId>
 		    <version>4.0.4</version>
 		</dependency>
+		
+		<!-- XSLT -->
+	    <dependency>
+	        <groupId>org.apache.xmlgraphics</groupId>
+	        <artifactId>fop</artifactId>
+	        <version>1.1</version>
+	        <exclusions>
+	            <exclusion>
+	                <groupId>org.apache.avalon.framework</groupId>
+	                <artifactId>avalon-framework-api</artifactId>
+	            </exclusion>
+	            <exclusion>
+	                <groupId>org.apache.avalon.framework</groupId>
+	                <artifactId>avalon-framework-impl</artifactId>
+	            </exclusion>
+	        </exclusions>
+	    </dependency>
+	    <dependency>
+	        <groupId>org.apache.avalon.framework</groupId>
+	        <artifactId>avalon-framework-api</artifactId>
+	        <version>4.3.1</version>
+	    </dependency>
+	    <dependency>
+	        <groupId>org.apache.avalon.framework</groupId>
+	        <artifactId>avalon-framework-impl</artifactId>
+	        <version>4.3.1</version>
+	    </dependency>
 
  		<!-- SLF4J -->
         <dependency>
