--- a/openinfra_core/pom.xml
+++ b/openinfra_core/pom.xml
@@ -19,6 +19,15 @@
                     <target>1.7</target>
                 </configuration>
             </plugin>
+            <!-- Tests are currently skipped -->
+		    <plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.12.4</version>
+				<configuration>
+					<skipTests>true</skipTests>
+				</configuration>
+		    </plugin>
             
             <!-- needed to build jar file when building war file, necessary for
            		 using backend classes in other maven projects (e.g. plugins)
