--- a/openinfra_core/pom.xml
+++ b/openinfra_core/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>de.btu.openinfra.core</groupId>
   <artifactId>openinfra_core</artifactId>
-  <version>1.1.0</version>
+  <version>1.1.1</version>
   <packaging>war</packaging>
   <name>openinfra_core</name>
   
@@ -19,6 +19,15 @@
                     <target>1.7</target>
                 </configuration>
             </plugin>
+            <!-- Tests are currently skipped -->
+		    <plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.12.4</version>
+				<configuration>
+					<skipTests>true</skipTests>
+				</configuration>
+		    </plugin>
             
             <!-- needed to build jar file when building war file, necessary for
            		 using backend classes in other maven projects (e.g. plugins)
