introduced a default value for sort order

--- a/openinfra_core/src/main/resources/de/btu/openinfra/backend/properties/OpenInfRA.properties
+++ b/openinfra_core/src/main/resources/de/btu/openinfra/backend/properties/OpenInfRA.properties
@@ -24,3 +24,6 @@ de.btu.openinfra.backend.rest.maxSize = 20
 # The following property defines the default language. This language is always
 # used when no language was specified.
 de.btu.openinfra.backend.language.default = de-DE
+
+# The following property defines the default ordering.
+de.btu.openinfra.backend.order = ASC
