--- a/openinfra_core/src/main/webapp/WEB-INF/web.xml
+++ b/openinfra_core/src/main/webapp/WEB-INF/web.xml
@@ -18,6 +18,19 @@
 	    <dispatcher>REQUEST</dispatcher>
 	</filter-mapping>
     
+    <!-- Security context -->
+	<listener>
+		<listener-class>org.apache.shiro.web.env.EnvironmentLoaderListener</listener-class>
+	</listener>
+    <filter>
+        <filter-name>ShiroFilter</filter-name>
+        <filter-class>org.apache.shiro.web.servlet.ShiroFilter</filter-class>
+    </filter>
+	<filter-mapping>
+		<filter-name>ShiroFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+    
     <!-- More information here: http://blog.dejavu.sk/2013/11/19/registering-resources-and-providers-in-jersey-2/ 
          and: https://jersey.java.net/apidocs/2.17/jersey/org/glassfish/jersey/servlet/ServletProperties.html-->
 	<servlet>
