changed shiro ini

--- a/openinfra_core/src/main/resources/shiro.ini
+++ b/openinfra_core/src/main/resources/shiro.ini
@@ -39,7 +39,7 @@ relationshiptypes = "projects/{id}/topiccharacteristics/{id}/relationshiptypes/{
 [urls]
 /login.jsp = authc
 /logout = logout
-/** = authc
+/** = authc, authcBasic
 
 #/EmployeeResource = authcBasic, perms["employee:*"]
 #, roles[employee, admin]
