--- a/openinfra_core/src/main/resources/shiro.ini
+++ b/openinfra_core/src/main/resources/shiro.ini
@@ -16,6 +16,7 @@ logout.redirectUrl = /login.jsp
 tino = tino, projectslr, projectlistall
 max = max, restricted
 alex = alex, root
+admin = admin, admin
 anonymous = anonymous
 
 # -----------------------------------------------------------------------------
@@ -24,7 +25,7 @@ anonymous = anonymous
 # -----------------------------------------------------------------------------
 [roles]
 root = *:*:*
-admin = /system/languagecodes:*, /system/languagecodes/{id}
+admin = /system:*, /system/languagecodes:*, /system/languagecodes/{id}
 restricted = /system/languagecodes/{id}:*:1
 projectslr = "/projects:get"
 projectlistall = "/projects/{id}:get:e7d42bff-4e40-4f43-9d1b-1dc5a190cd75"
