extended security context

--- a/openinfra_core/src/main/resources/shiro.ini
+++ b/openinfra_core/src/main/resources/shiro.ini
@@ -18,6 +18,7 @@ max = max, restricted
 alex = alex, root
 admin = admin, admin
 anonymous = anonymous
+systemreader = systemreader, systemreader
 
 # -----------------------------------------------------------------------------
 # Roles with assigned permissions
@@ -32,6 +33,7 @@ projectlistall = "/projects/{id}:get:e7d42bff-4e40-4f43-9d1b-1dc5a190cd75"
 subprojects = "projects/{id}/subprojects:get:1"
 ptlocale = "projects/{id}/ptlocale/{id}:get:2:*"
 relationshiptypes = "projects/{id}/topiccharacteristics/{id}/relationshiptypes/{id}:get:1:1:1"
+systemreader = "/system:get"
 
 #ptlocaleread = /projects/1/ptlocale/{id}:get:2, /projects/2/ptlocale/{id}:get:2
 #ptlocaleread = "/projects/{id}/ptlocale/{id}:get:1:*", /projects/2/ptlocale/{id}:get:2
