--- a/openinfra_core/src/main/resources/shiro.ini
+++ b/openinfra_core/src/main/resources/shiro.ini
@@ -1,53 +1,16 @@
-# =============================================================================
-# Tutorial INI configuration
-#
-# Usernames/passwords are based on the classic Mel Brooks' film "Spaceballs" :)
-# =============================================================================
-
 [main]
 shiro.loginUrl = /login.jsp
 logout.redirectUrl = /login.jsp
 
-# -----------------------------------------------------------------------------
-# Users and their (optional) assigned roles
-# username = password, role1, role2, ..., roleN
-# -----------------------------------------------------------------------------
-[users]
-tino = tino, projectslr, projectlistall
-max = max, restricted
-alex = alex, root
-admin = admin, admin
-anonymous = anonymous
-systemreader = systemreader, systemreader
+# ------------------------
+# Database
+ 
+# Own Realm
+jdbcRealm = de.btu.openinfra.backend.db.rbac.OpenInfraRealm
 
-# -----------------------------------------------------------------------------
-# Roles with assigned permissions
-# roleName = perm1, perm2, ..., permN
-# -----------------------------------------------------------------------------
-[roles]
-root = *:*:*
-admin = /system:*, /system/languagecodes:*, /system/languagecodes/{id}
-restricted = /system/languagecodes/{id}:*:1
-projectslr = "/projects:get"
-projectlistall = "/projects/{id}:get:e7d42bff-4e40-4f43-9d1b-1dc5a190cd75"
-subprojects = "projects/{id}/subprojects:get:1"
-ptlocale = "projects/{id}/ptlocale/{id}:get:2:*"
-relationshiptypes = "projects/{id}/topiccharacteristics/{id}/relationshiptypes/{id}:get:1:1:1"
-systemreader = "/system:get"
-
-#ptlocaleread = /projects/1/ptlocale/{id}:get:2, /projects/2/ptlocale/{id}:get:2
-#ptlocaleread = "/projects/{id}/ptlocale/{id}:get:1:*", /projects/2/ptlocale/{id}:get:2
-
+securityManager.realms = $jdbcRealm
 
 [urls]
 /login.jsp = authc
 /logout = logout
 /** = authc, authcBasic
-
-#/EmployeeResource = authcBasic, perms["employee:*"]
-#, roles[employee, admin]
-#/EmployeeResource/2 = anon
-#/EmployeeResource/* = authcBasic
-#/EmployeeResource/* = authcBasic, roles[employee]
-#/EmployeeResource/2 = authcBasic, roles[employee]
-#/** = authcBasic
