resolved cache warning

--- a/openinfra_core/src/main/resources/shiro.ini
+++ b/openinfra_core/src/main/resources/shiro.ini
@@ -2,12 +2,13 @@
 shiro.loginUrl = /login.jsp
 logout.redirectUrl = /login.jsp
 
-# ------------------------
-# Database
- 
 # custom Realm
 customRealm = de.btu.openinfra.backend.db.rbac.OpenInfraRealm
 securityManager.realms = $customRealm
+
+# cache management
+builtInCacheManager = org.apache.shiro.cache.MemoryConstrainedCacheManager
+securityManager.cacheManager = $builtInCacheManager
 
 [urls]
 /login.jsp = authc
