added hash for password

--- a/openinfra_core/src/main/resources/shiro.ini
+++ b/openinfra_core/src/main/resources/shiro.ini
@@ -1,9 +1,18 @@
+# http://shiro.apache.org/realm.html
+
 [main]
 shiro.loginUrl = /login.jsp
 logout.redirectUrl = /login.jsp
 
+# Hashing and salting
+credentialsMatcher = org.apache.shiro.authc.credential.Sha256CredentialsMatcher
+# base64 encoding, not hex in this example:
+credentialsMatcher.storedCredentialsHexEncoded = false
+credentialsMatcher.hashIterations = 1024
+
 # custom Realm
 customRealm = de.btu.openinfra.backend.db.rbac.OpenInfraRealm
+customRealm.credentialsMatcher = $credentialsMatcher
 securityManager.realms = $customRealm
 
 # cache management
