--- a/openinfra_core/pom.xml
+++ b/openinfra_core/pom.xml
@@ -108,6 +108,14 @@
 		    <artifactId>jersey-media-json-jackson</artifactId>
 		</dependency>
 		
+		<!-- simple json string to object converter -->
+		<dependency>
+		    <groupId>com.googlecode.json-simple</groupId>
+    		<artifactId>json-simple</artifactId>
+		    <version>1.1.1</version>
+		</dependency>
+
+
 		<!-- JSP as template engine -->
 		<dependency>
 	    <groupId>org.glassfish.jersey.ext</groupId>
