Added HTTP header Expired for session timeout

--- a/openinfra_core/src/main/resources/shiro.ini
+++ b/openinfra_core/src/main/resources/shiro.ini
@@ -20,6 +20,10 @@ securityManager.realms = $customRealm
 builtInCacheManager = org.apache.shiro.cache.MemoryConstrainedCacheManager
 securityManager.cacheManager = $builtInCacheManager
 
+# -- Global Session Timeout -- 3,600,000 milliseconds = 1 hour
+securityManager.sessionMode=native
+securityManager.sessionManager.globalSessionTimeout = 3600000
+
 [urls]
 /login.jsp = authc
 /logout = logout
