--- a/openinfra_core/src/main/webapp/WEB-INF/web.xml
+++ b/openinfra_core/src/main/webapp/WEB-INF/web.xml
@@ -42,7 +42,8 @@
         </init-param>
 		<init-param>
             <param-name>jersey.config.server.provider.classnames</param-name>
-            <param-value>de.btu.openinfra.backend.filter.OpenInfraRequestFilter</param-value>
+            <param-value>de.btu.openinfra.backend.filter.OpenInfraRequestFilter,
+            de.btu.openinfra.backend.filter.OpenInfraResponseFilter</param-value>
         </init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
