--- a/openinfra_core/src/main/resources/shiro.ini
+++ b/openinfra_core/src/main/resources/shiro.ini
@@ -3,7 +3,7 @@
 [main]
 shiro.loginUrl = /login.jsp
 logout.redirectUrl = /login.jsp
-authc.successUrl = /rest/projects
+authc.successUrl = /rest/v1/projects
 
 # Hashing and salting
 credentialsMatcher = org.apache.shiro.authc.credential.Sha256CredentialsMatcher
