fixed login problems

--- a/openinfra_core/src/main/resources/shiro.ini
+++ b/openinfra_core/src/main/resources/shiro.ini
@@ -27,4 +27,4 @@ securityManager.sessionManager.globalSessionTimeout = 3600000
 [urls]
 /login.jsp = authc
 /logout = logout
-/** = authc, authcBasic
+/** = authc
