--- a/openinfra_core/pom.xml
+++ b/openinfra_core/pom.xml
@@ -107,21 +107,17 @@
 		    <groupId>org.glassfish.jersey.media</groupId>
 		    <artifactId>jersey-media-json-jackson</artifactId>
 		</dependency>
-		
-		<!-- simple json string to object converter -->
-		<!-- TODO test if it is really necessary to use this lib instead of 
-			 jackson ObjectMapper -->
-		<dependency>
-		    <groupId>com.googlecode.json-simple</groupId>
-    		<artifactId>json-simple</artifactId>
-		    <version>1.1.1</version>
-		</dependency>
-
 
 		<!-- JSP as template engine -->
 		<dependency>
 	    <groupId>org.glassfish.jersey.ext</groupId>
 		    <artifactId>jersey-mvc-jsp</artifactId>
+		</dependency>
+
+		<!-- Media multipart required for file upload -->		
+		<dependency>
+		    <groupId>org.glassfish.jersey.media</groupId>
+		    <artifactId>jersey-media-multipart</artifactId>
 		</dependency>
 		
 		<!-- For testing the application it is recommended to use
@@ -130,6 +126,15 @@
 		<dependency>
 		    <groupId>org.glassfish.jersey.test-framework.providers</groupId>
 		    <artifactId>jersey-test-framework-provider-grizzly2</artifactId>
+		</dependency>
+		
+		<!-- simple json string to object converter -->
+		<!-- TODO test if it is really necessary to use this lib instead of 
+			 jackson ObjectMapper -->
+		<dependency>
+		    <groupId>com.googlecode.json-simple</groupId>
+    		<artifactId>json-simple</artifactId>
+		    <version>1.1.1</version>
 		</dependency>
 		
 		<dependency>
@@ -216,7 +221,7 @@
 		</dependency>
     </dependencies>
     <properties>
-        <jersey.version>2.18</jersey.version>
+        <jersey.version>2.22.1</jersey.version>
         <slf4j.version>1.7.12</slf4j.version>
         <solr.version>4.10.4</solr.version>
         <shiro.version>1.2.4</shiro.version>
