initial file reading properties

--- a/openinfra_core/src/main/resources/de/btu/openinfra/backend/properties/OpenInfRA.properties
+++ b/openinfra_core/src/main/resources/de/btu/openinfra/backend/properties/OpenInfRA.properties
@@ -27,3 +27,11 @@ de.btu.openinfra.backend.language.default = de-DE
 
 # The following property defines the default ordering.
 de.btu.openinfra.backend.order = ASC
+
+# The following property defines the default file paths for windows and
+# unix-based operating systems. The OpenInfRA application defines autonomously 
+# which variable is used. MAC and Linux-based operating systems are currently
+# defined as unix-based operating system. 
+# The windows file path must be escaped like so: C:\\ProgramData\\OpenInfRA
+de.btu.openinfra.backend.unix.file.path = /var/tomcat/openinfra
+de.btu.openinfra.backend.win.file.path = C:\\ProgramData\\OpenInfRA
