added upload function

--- a/openinfra_core/src/main/webapp/WEB-INF/web.xml
+++ b/openinfra_core/src/main/webapp/WEB-INF/web.xml
@@ -43,7 +43,8 @@
 		<init-param>
             <param-name>jersey.config.server.provider.classnames</param-name>
             <param-value>de.btu.openinfra.backend.filter.OpenInfraRequestFilter,
-            de.btu.openinfra.backend.filter.OpenInfraResponseFilter</param-value>
+            de.btu.openinfra.backend.filter.OpenInfraResponseFilter,
+            org.glassfish.jersey.media.multipart.MultiPartFeature</param-value>
         </init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
