Ticket #1537 excluded /rest/version from security check

--- a/openinfra_core/src/main/resources/shiro.ini
+++ b/openinfra_core/src/main/resources/shiro.ini
@@ -25,6 +25,7 @@ securityManager.sessionMode=native
 securityManager.sessionManager.globalSessionTimeout = 3600000
 
 [urls]
+/rest/version = anon
 /login.jsp = authc
 /logout = logout
 /** = authc
