--- a/openinfra_core/pom.xml
+++ b/openinfra_core/pom.xml
@@ -219,6 +219,21 @@
 		    <artifactId>shiro-web</artifactId>
 		    <version>${shiro.version}</version>
 		</dependency>
+		
+		<!-- Create thumbnails -->
+		<dependency>
+		    <groupId>net.coobird</groupId>
+		    <artifactId>thumbnailator</artifactId>
+		    <version>0.4.8</version>
+		</dependency>
+		
+		<!-- Read exif data -->
+		<dependency>
+		    <groupId>com.drewnoakes</groupId>
+		    <artifactId>metadata-extractor</artifactId>
+		    <version>2.8.1</version>
+		</dependency>
+		
     </dependencies>
     <properties>
         <jersey.version>2.22.1</jersey.version>
