--- a/openinfra_core/src/main/resources/shiro.ini
+++ b/openinfra_core/src/main/resources/shiro.ini
@@ -2,7 +2,7 @@
 
 [main]
 shiro.loginUrl = /login.jsp
-logout.redirectUrl = /login.jsp
+logout.redirectUrl = /login.jsp?status=logout
 authc.successUrl = /rest/v1/projects
 
 # Hashing and salting
