--- a/openinfra_core/src/main/resources/de/btu/openinfra/backend/properties/OpenInfRA.properties
+++ b/openinfra_core/src/main/resources/de/btu/openinfra/backend/properties/OpenInfRA.properties
@@ -35,3 +35,6 @@ de.btu.openinfra.backend.order = ASC
 # The windows file path must be escaped like so: C:\\ProgramData\\OpenInfRA
 de.btu.openinfra.backend.unix.file.path = /var/tomcat/openinfra
 de.btu.openinfra.backend.win.file.path = C:\\ProgramData\\OpenInfRA
+
+# The following property defines the default ImageMagick path
+de.btu.openinfra.backend.win.imagemagick.path = C:\\Program Files\\ImageMagick
