--- a/openinfra_core/pom.xml
+++ b/openinfra_core/pom.xml
@@ -63,6 +63,13 @@
     		<version>19.0-rc1</version>
 		</dependency>
 		
+		<!-- Reflections is used to get the classes of a given package. -->
+		<dependency>
+         	<groupId>org.reflections</groupId>
+         	<artifactId>reflections</artifactId>
+         	<version>0.9.9-RC1</version>
+     	</dependency>
+		
 	    <!-- EclipseLink is used as persistence API and for object relational 
 	         mapping.  -->
 		<dependency>
