chunked file upload

--- a/openinfra_core/src/main/resources/de/btu/openinfra/backend/properties/OpenInfRA.properties
+++ b/openinfra_core/src/main/resources/de/btu/openinfra/backend/properties/OpenInfRA.properties
@@ -28,6 +28,14 @@ de.btu.openinfra.backend.language.default = de-DE
 # The following property defines the default ordering.
 de.btu.openinfra.backend.order = ASC
 
+# The following properties describe the default image dimensions 
+# (width x height) e.g.: 60x60 
+# The thumbnail dimension is fixed size while the other dimensions are 
+# automatically scaled to the best fit.
+de.btu.openinfra.backend.img.thumbnail.dimension = 60x60
+de.btu.openinfra.backend.img.middle.dimension = 400x400
+de.btu.openinfra.backend.img.popup.dimension = 800x800
+
 # The following property defines the default file paths for windows and
 # unix-based operating systems. The OpenInfRA application defines autonomously 
 # which variable is used. MAC and Linux-based operating systems are currently
