--- a/openinfra_core/pom.xml
+++ b/openinfra_core/pom.xml
@@ -198,7 +198,7 @@
         <dependency>
     		<groupId>org.apache.solr</groupId>
     		<artifactId>solr-solrj</artifactId>
-    		<version>${solr.version}</version>
+    		<version>${solr-solrj.version}</version>
 		</dependency>
 		
 		<!-- provides string escape used to prevent XSS -->
@@ -223,7 +223,7 @@
     <properties>
         <jersey.version>2.22.1</jersey.version>
         <slf4j.version>1.7.12</slf4j.version>
-        <solr.version>4.10.4</solr.version>
+        <solr-solrj.version>5.3.1</solr-solrj.version>
         <shiro.version>1.2.4</shiro.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
