--- a/openinfra_core/src/main/resources/de/btu/openinfra/plugins/solr/properties/Solr.properties
+++ b/openinfra_core/src/main/resources/de/btu/openinfra/plugins/solr/properties/Solr.properties
@@ -1,3 +1,7 @@
-# Solr
+# This property defines the URL to the Solr server.
 de.btu.openinfra.plugins.solr.url = http://localhost:8983/solr
+# This property defines the name of the Solr core that will be used
 de.btu.openinfra.plugins.solr.core = openinfra
+
+# This property sets the default value for a fuzzy request
+de.btu.openinfra.plugins.solr.defaultFuzzy = 0.6
