--- a/openinfra_core/pom.xml
+++ b/openinfra_core/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>de.btu.openinfra.core</groupId>
   <artifactId>openinfra_core</artifactId>
-  <version>1.3.0</version>
+  <version>1.3.0.1</version>
   <packaging>war</packaging>
   <name>openinfra_core</name>
   
@@ -232,6 +232,13 @@
 		    <groupId>org.im4java</groupId>
 		    <artifactId>im4java</artifactId>
 		    <version>1.4.0</version>
+		</dependency>
+		
+		<!-- Improved mime type detection -->
+		<dependency>
+		    <groupId>org.apache.tika</groupId>
+		    <artifactId>tika-core</artifactId>
+		    <version>1.11</version>
 		</dependency>
 		
 		<!-- Read exif data -->
