added mime type matching

--- a/openinfra_core/src/main/resources/shiro.ini
+++ b/openinfra_core/src/main/resources/shiro.ini
@@ -26,6 +26,7 @@ securityManager.sessionManager.globalSessionTimeout = 3600000
 
 [urls]
 /rest/version = anon
+/rest/application.* = anon
 /login.jsp = authc
 /logout = logout
 /** = authc
