added configurable window function for results

--- a/openinfra_core/src/main/resources/de/btu/openinfra/plugins/solr/properties/Solr.properties
+++ b/openinfra_core/src/main/resources/de/btu/openinfra/plugins/solr/properties/Solr.properties
@@ -5,3 +5,6 @@ de.btu.openinfra.plugins.solr.core = openinfra
 
 # This property sets the default value for a fuzzy request
 de.btu.openinfra.plugins.solr.defaultFuzzy = 0.6
+
+# This property sets the default maximum number of results per request
+de.btu.openinfra.plugins.solr.defaultResultsPerPage = 20
