moved version from /rest/version to /version

--- a/openinfra_core/src/main/resources/shiro.ini
+++ b/openinfra_core/src/main/resources/shiro.ini
@@ -25,7 +25,7 @@ securityManager.sessionMode=native
 securityManager.sessionManager.globalSessionTimeout = 3600000
 
 [urls]
-/rest/version = anon
+/version = anon
 /rest/application.* = anon
 /login.jsp = authc
 /logout = logout
