--- a/openinfra_core/src/main/webapp/WEB-INF/web.xml
+++ b/openinfra_core/src/main/webapp/WEB-INF/web.xml
@@ -30,7 +30,7 @@
 		<filter-name>ShiroFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-    
+	    
     <!-- More information here: http://blog.dejavu.sk/2013/11/19/registering-resources-and-providers-in-jersey-2/ 
          and: https://jersey.java.net/apidocs/2.17/jersey/org/glassfish/jersey/servlet/ServletProperties.html-->
 	<servlet>
@@ -53,5 +53,17 @@
 		<servlet-name>OpenInfRA Web Application</servlet-name>
 		<url-pattern>/rest/*</url-pattern>
 	</servlet-mapping>
+	
+	<servlet>
+	   <servlet-name>OpenInfraVersion</servlet-name>
+	   <servlet-class>de.btu.openinfra.backend.servlet.OpenInfraVersion</servlet-class>
+	   <load-on-startup>2</load-on-startup>
+	</servlet>
+	
+	<servlet-mapping>
+	   <servlet-name>OpenInfraVersion</servlet-name>
+	   <url-pattern>/version</url-pattern>
+	</servlet-mapping>
+
 	
 </web-app>
