--- a/openinfra_core/src/main/webapp/WEB-INF/web.xml
+++ b/openinfra_core/src/main/webapp/WEB-INF/web.xml
@@ -40,6 +40,10 @@
             <param-name>javax.ws.rs.Application</param-name>
             <param-value>de.btu.openinfra.backend.OpenInfraApplication</param-value>
         </init-param>
+        <!--  init-param>
+			<param-name>jersey.config.server.wadl.generatorConfig</param-name>
+			<param-value>de.btu.openinfra.backend.OpenInfraWadlConfig</param-value>
+		</init-param -->
 		<init-param>
             <param-name>jersey.config.server.provider.classnames</param-name>
             <param-value>de.btu.openinfra.backend.filter.OpenInfraRequestFilter,
