--- a/openinfra_core/pom.xml
+++ b/openinfra_core/pom.xml
@@ -99,12 +99,8 @@
         					<pluginExecutions>
         						<pluginExecution>
         							<pluginExecutionFilter>
-        								<groupId>
-        									org.apache.maven.plugins
-        								</groupId>
-        								<artifactId>
-        									maven-javadoc-plugin
-        								</artifactId>
+        								<groupId>org.apache.maven.plugins</groupId>
+        								<artifactId>maven-javadoc-plugin</artifactId>
         								<versionRange>
         									[2.4,)
         								</versionRange>
