added new REST end point to get suggestions

--- a/openinfra_core/src/main/resources/de/btu/openinfra/backend/properties/OpenInfRA.properties
+++ b/openinfra_core/src/main/resources/de/btu/openinfra/backend/properties/OpenInfRA.properties
@@ -28,6 +28,9 @@ de.btu.openinfra.backend.language.default = de-DE
 # The following property defines the default ordering.
 de.btu.openinfra.backend.order = ASC
 
+# The following property defines the maximum number of results for suggestion
+de.btu.openinfra.backend.suggestion.maxResults = 10
+
 # The following properties describe the default image dimensions 
 # (width x height) e.g.: 60x60 
 # The thumbnail dimension is fixed size while the other dimensions are 
