added configurable delay to indexing thread and abort mechanism

--- a/openinfra_core/src/main/resources/de/btu/openinfra/backend/properties/OpenInfRA.properties
+++ b/openinfra_core/src/main/resources/de/btu/openinfra/backend/properties/OpenInfRA.properties
@@ -70,4 +70,10 @@ de.btu.openinfra.backend.solr.defaultFuzzy = 0.6
 # This property sets the default maximum number of results per request
 de.btu.openinfra.backend.solr.defaultResultsPerPage = 20
 
+# This property sets the index delay time after inserting, updating or deleting
+# defined objects in the database. The delay time must be specified in 
+# milliseconds. There is a process that determine that the specified value can
+# not fall below a certain value.
+de.btu.openinfra.backend.solr.indexDelay = 20000
+
 ############################## Solr configuration ##############################
