added indexing for documents

--- a/openinfra_core/src/main/resources/de/btu/openinfra/backend/properties/OpenInfRA.properties
+++ b/openinfra_core/src/main/resources/de/btu/openinfra/backend/properties/OpenInfRA.properties
@@ -76,4 +76,8 @@ de.btu.openinfra.backend.solr.defaultResultsPerPage = 20
 # not fall below a certain value.
 de.btu.openinfra.backend.solr.indexDelay = 20000
 
+# This property defines the file formats that will be included for document 
+# indexing.
+de.btu.openinfra.backend.solr.indexableDocuments = pdf,doc,txt
+
 ############################## Solr configuration ##############################
