--- a/openinfra_core/pom.xml
+++ b/openinfra_core/pom.xml
@@ -323,6 +323,20 @@
 		    <version>2.8.1</version>
 		</dependency>
 		
+		<!-- Tika parser that are required for parsing files -->
+		<dependency>
+			<groupId>org.apache.tika</groupId>
+			<artifactId>tika-parsers</artifactId>
+			<version>1.11</version>
+		</dependency>
+		
+		<!-- necessary for Tika parser -->
+		<dependency>
+      		<groupId>commons-io</groupId>
+			  <artifactId>commons-io</artifactId>
+		      <version>2.4</version>
+   		</dependency>
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
