--- a/openinfra_core/pom.xml
+++ b/openinfra_core/pom.xml
@@ -233,7 +233,7 @@
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
             <artifactId>eclipselink</artifactId>
-            <version>2.7.3</version>
+            <version>2.7.4</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
@@ -266,6 +266,11 @@
             <!-- use the following artifactId if you don't need servlet 2.x 
             compatibility -->
             <!-- artifactId>jersey-container-servlet</artifactId -->
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.inject</groupId>
+            <artifactId>jersey-hk2</artifactId>
+            <version>${jersey.version}</version>
         </dependency>
         
         <!-- MOXY for JSON support !! caution : doesn't provide UUID support -->
@@ -402,7 +407,7 @@
         <dependency>
             <groupId>org.apache.tika</groupId>
             <artifactId>tika-core</artifactId>
-            <version>1.19.1</version>
+            <version>1.20</version>
         </dependency>
 		
         <!-- Read exif data -->
@@ -416,7 +421,7 @@
         <dependency>
             <groupId>org.apache.tika</groupId>
             <artifactId>tika-parsers</artifactId>
-            <version>1.19.1</version>
+            <version>1.20</version>
         </dependency>
 		
         <!-- necessary for Tika parser -->
@@ -450,16 +455,16 @@
         <dependency>
             <groupId>com.sun.xml.bind</groupId>
             <artifactId>jaxb-impl</artifactId>
-            <version>2.3.1</version>
+            <version>2.3.2</version>
         </dependency>
     </dependencies>
     <properties>
-        <jersey.version>2.27</jersey.version>
+        <jersey.version>2.28</jersey.version>
         <slf4j.version>1.7.25</slf4j.version>
         <solr-solrj.version>5.3.1</solr-solrj.version>
         <shiro.version>1.4.0</shiro.version>
         <jxb.version>2.3.1</jxb.version>
-        <cfjc.version>2.9.7</cfjc.version>
+        <cfjc.version>2.9.8</cfjc.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
   
