--- a/openinfra_core/pom.xml
+++ b/openinfra_core/pom.xml
@@ -60,7 +60,7 @@
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>3.0.1</version>
                 <executions>
-                    <execution>
+<!--                <execution>
                         <id>generate-extended-wadl</id>
                         <configuration>
                             <encoding>UTF-8</encoding>
@@ -101,9 +101,9 @@
                                     <version>2.3.1</version>
                                 </docletArtifact>
                             </docletArtifacts>
-                            <!-- the following option is required as a work around for
+                             the following option is required as a work around for
                             version 2.5 of the javadoc plugin which will be used
-                            by a maven version > 2.0.9 -->
+                            by a maven version > 2.0.9 
                             <useStandardDocletOptions>false</useStandardDocletOptions>
                             <additionalOptions>
                                 <additionalOption>-output ${basedir}/src/main/resources/de/btu/openinfra/backend/wadl/resourcedoc.xml</additionalOption>
@@ -113,8 +113,8 @@
                             <goal>javadoc</goal>
                         </goals>
                         <phase>compile</phase>
-                    </execution>
-                    <execution>
+                    </execution>-->
+<!--                    <execution>
                         <id>attach-javadocs</id>
                         <configuration>
                             <encoding>UTF-8</encoding>
@@ -125,7 +125,7 @@
                         <goals>
                             <goal>jar</goal>
                         </goals>
-                    </execution>
+                    </execution>-->
                 </executions>
             </plugin>
             
@@ -298,7 +298,7 @@
             <artifactId>jersey-media-multipart</artifactId>
             <version>${jersey.version}</version>
         </dependency>
-		
+	
         <!-- simple json string to object converter -->
         <dependency>
             <groupId>com.googlecode.json-simple</groupId>
