--- a/openinfra_core/pom.xml
+++ b/openinfra_core/pom.xml
@@ -407,7 +407,7 @@
         <dependency>
             <groupId>org.apache.tika</groupId>
             <artifactId>tika-core</artifactId>
-            <version>1.21</version>
+            <version>[1.22,)</version>
         </dependency>
 		
         <!-- Read exif data -->
@@ -421,7 +421,7 @@
         <dependency>
             <groupId>org.apache.tika</groupId>
             <artifactId>tika-parsers</artifactId>
-            <version>1.21</version>
+            <version>[1.22,)</version>
         </dependency>
 		
         <!-- necessary for Tika parser -->
@@ -462,7 +462,7 @@
         <jersey.version>2.28</jersey.version>
         <slf4j.version>1.7.26</slf4j.version>
         <solr-solrj.version>5.3.1</solr-solrj.version>
-        <shiro.version>1.4.1</shiro.version>
+        <shiro.version>[1.4.2,)</shiro.version>
         <jxb.version>2.3.1</jxb.version>
         <cfjc.version>2.10.3</cfjc.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
