--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 nb-configuration.xml
+openinfra_core/.vscode/
+openinfra_core/.settings/
